<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Upcoming"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/About"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
        <item
            android:id="@+id/Help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help" />
        <item
            android:id="@+id/Feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback" />
        <item
            android:id="@+id/RemoveAds"
            android:icon="@drawable/ic_baseline_remove_circle_24"
            android:title="@string/removeads" />
        <item
            android:id="@+id/Sharetheapp"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share_the_app1" />

    </group>
</menu>